--- a/Web/loginfunction/templates/tables.html
+++ b/Web/loginfunction/templates/tables.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>人流管理系统</title>
+    <title>人流量管理系统</title>
     <!-- Bootstrap core CSS-->
     <link href={% static "vendor/bootstrap/css/bootstrap.min.css" %} rel="stylesheet">
     <!-- Custom fonts for this template-->
-    <link href={% static "vendor/font-awesome/css/font-awesome.min.css" %} rel="stylesheet" type="text/css">
+    <link href={% static "vendor/font-awesome/css/font-awesome.min.css" %} rel="stylesheet">
     <!-- Page level plugin CSS-->
     <link href={% static "vendor/datatables/dataTables.bootstrap4.css" %} rel="stylesheet">
     <!-- Custom styles for this template-->
@@ -22,7 +21,7 @@
     <body class="fixed-nav sticky-footer bg-dark" id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-        <a class="navbar-brand" href={% url "index" %}>人流量管理系统</a>
+        <a class="navbar-brand" href="index.html">人流量管理系统</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -31,13 +30,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href={% url "index" %}>
                         <i class="fa fa-fw fa-dashboard"></i>
                         <span class="nav-link-text">人流量概览</span>
                     </a>
                 </li>
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-                    <a class="nav-link" href={% url "charts"%}>
+                    <a class="nav-link" href={% url "charts" %}>
                         <i class="fa fa-fw fa-area-chart"></i>
                         <span class="nav-link-text">功能一</span>
                     </a>
@@ -49,7 +48,6 @@
                     </a>
                 </li>
             </ul>
-
             <ul class="navbar-nav sidenav-toggler">
                 <li class="nav-item">
                     <a class="nav-link text-center" id="sidenavToggler">
@@ -59,6 +57,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
 
+
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
                         <i class="fa fa-fw fa-sign-out"></i>管理员注销</a>
@@ -67,79 +66,14 @@
         </div>
     </nav>
     <div class="content-wrapper">
-        <div class="container-fluid">
-            <!-- Breadcrumbs-->
-            <div class="card-header">
-                <i class="fa fa-newspaper-o"> </i>
-                当前人流信息:
-            </div>
-            <!-- Icon Cards-->
-            <div class="row">
-                <div class="col-xl-12 mb-3 h-100 w-100">
-                    <div class="card text-white bg-danger o-hidden h-100 w-100">
-                        <div class="card-body">
-                            <div class="mr-5 text-center">当前人流量:10000人次</div>
-                        </div>
-                        <a class="card-footer text-white small z-1 " href="#">
-                            <span class="float-left ">当前状态:红色预警</span>
-                            </span>
-                        </a>
-                    </div>
-
-                </div>
-            </div>
-            <!-- Area Chart Example-->
-            <div class="card mb-3">
-                <div class="card-header">
-                    <i class="fa fa-area-chart"></i> 人流量历史记录
-                </div>
-                <div class="card-body">
-                    <canvas id="myAreaChart" width="100%" height="30"></canvas>
-                </div>
-                <div class="card-footer small text-muted">更新时间： 11:59 PM</div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8">
-                    <!-- Example Bar Chart Card-->
-                    <div class="card mb-3">
-                        <div class="card-header">
-                            <i class="fa fa-bar-chart"></i> Bar Chart Example
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-8 my-auto">
-                                    <canvas id="myBarChart" width="100" height="50"></canvas>
-                                </div>
-                                <div class="col-sm-4 text-center my-auto">
-                                    <div class="h4 mb-0 text-primary">$34,693</div>
-                                    <div class="small text-muted">YTD Revenue</div>
-                                    <hr>
-                                    <div class="h4 mb-0 text-warning">$18,474</div>
-                                    <div class="small text-muted">YTD Expenses</div>
-                                    <hr>
-                                    <div class="h4 mb-0 text-success">$16,219</div>
-                                    <div class="small text-muted">YTD Margin</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-footer small text-muted">更新于： 11:59 PM</div>
-                    </div>
-                </div>
-            </div>
-            <!-- /Card Columns-->
-        </div>
-        <div class="col-lg-4">
-            <div class="card mb-3">
-                <div class="card-header">
-                    <i class="fa fa-pie-chart"></i> Pie Chart Example
-                </div>
-                <div class="card-body">
-                    <canvas id="myPieChart" width="100%" height="100"></canvas>
-                </div>
-                <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-            </div>
-
-        </div>
+    <div class="container-fluid">
+        <!-- Breadcrumbs-->
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="#">Dashboard</a>
+            </li>
+            <li class="breadcrumb-item active">Tables</li>
+        </ol>
         <!-- Example DataTables Card-->
         <div class="card mb-3">
             <div class="card-header">
@@ -632,13 +566,6 @@
             <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
         </div>
     </div>
-    <!-- /.container-fluid-->
-    <!-- /.content-wrapper-->
-    <footer class="sticky-footer">
-        <div class="container">
-        </div>
-    </footer>
-    <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
         <i class="fa fa-angle-up"></i>
     </a>
@@ -670,23 +597,18 @@
         redirect('{% url "login:login" %}');
     </script>
 {% endif %}
-<!-- Bootstrap core JavaScript-->
 <script src={% static "vendor/jquery/jquery.min.js" %}></script>
 <script src={% static "vendor/bootstrap/js/bootstrap.bundle.min.js" %}></script>
 <!-- Core plugin JavaScript-->
 <script src={% static "vendor/jquery-easing/jquery.easing.min.js" %}></script>
 <!-- Page level plugin JavaScript-->
-<script src={% static "vendor/chart.js/Chart.min.js" %}></script>
 <script src={% static "vendor/datatables/jquery.dataTables.js" %}></script>
 <script src={% static "vendor/datatables/dataTables.bootstrap4.js" %}></script>
 <!-- Custom scripts for all pages-->
-<script src={% static "js/sb-admin.min.js" %}></script>
+<script src="js/sb-admin.min.js"></script>
 <!-- Custom scripts for this page-->
-<script src={% static "js/sb-admin-datatables.min.js" %}></script>
-<script src={% static "js/sb-admin-charts.min.js" %}></script>
+<script src="js/sb-admin-datatables.min.js"></script>
 </div>
 </body>
 
 </html>
-<script>
-</script>
