增加人流总数数据模型和变色功能

--- a/Web/loginfunction/templates/chart2.html
+++ b/Web/loginfunction/templates/chart2.html
@@ -2,7 +2,7 @@
                     <!-- Example Bar Chart Card-->
                     <div class="card mb-3">
                         <div class="card-header">
-                            <i class="fa fa-bar-chart"></i> Bar Chart Example
+                            <i class="fa fa-bar-chart"></i> 人流量趋势
                         </div>
                         <div class="card-body">
                             <div class="row">
