--- a/Web/loginfunction/templates/chart3.html
+++ b/Web/loginfunction/templates/chart3.html
@@ -1,7 +1,7 @@
 <div class="col-lg-4">
     <div class="card mb-3">
         <div class="card-header">
-            <i class="fa fa-pie-chart"></i> Pie Chart Example
+            <i class="fa fa-pie-chart"></i> 人流趋势饼状图
         </div>
         <div class="card-body">
             <canvas id="myPieChart" width="100%" height="100"></canvas>
