--- a/Web/loginfunction/templates/model.html
+++ b/Web/loginfunction/templates/model.html
@@ -1,45 +1,50 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-        <a class="navbar-brand" href={% url "index" %}>人流量管理系统</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-                    <a class="nav-link" href={% url "index"%}>
-                        <i class="fa fa-fw fa-dashboard"></i>
-                        <span class="nav-link-text">人流量概览</span>
-                    </a>
-                </li>
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
-                    <a class="nav-link" href={% url "charts"%}>
-                        <i class="fa fa-fw fa-area-chart"></i>
-                        <span class="nav-link-text">功能一</span>
-                    </a>
-                </li>
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
-                    <a class="nav-link" href={% url "tables" %}>
-                        <i class="fa fa-fw fa-table"></i>
-                        <span class="nav-link-text">功能二</span>
-                    </a>
-                </li>
-            </ul>
+    <a class="navbar-brand" href={% url "index" %}>人流量管理系统</a>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
+                <a class="nav-link" href={% url "index" %}>
+                    <i class="fa fa-fw fa-dashboard"></i>
+                    <span class="nav-link-text">人流量概览</span>
+                </a>
+            </li>
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
+                <a class="nav-link" href={% url "charts" %}>
+                    <i class="fa fa-fw fa-area-chart"></i>
+                    <span class="nav-link-text">人流量记录趋势图</span>
+                </a>
+            </li>
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+                <a class="nav-link" href={% url "tables" %}>
+                    <i class="fa fa-fw fa-table"></i>
+                    <span class="nav-link-text">人流量记录表</span>
+                </a>
+            </li>
+        </ul>
 
-            <ul class="navbar-nav sidenav-toggler">
-                <li class="nav-item">
-                    <a class="nav-link text-center" id="sidenavToggler">
-                        <i class="fa fa-fw fa-angle-left"></i>
-                    </a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav sidenav-toggler">
+            <li class="nav-item">
+                <a class="nav-link text-center" id="sidenavToggler">
+                    <i class="fa fa-fw fa-angle-left"></i>
+                </a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
 
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-                        <i class="fa fa-fw fa-sign-out"></i>管理员注销</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
+                    <i class="fa fa-fw fa-sign-out"></i>管理员注销</a>
+            </li>
+        </ul>
+    </div>
+{#    <script type="text/javascript">#}
+{#        setTimeout(function () {  //使用  setTimeout（）方法设定定时2000毫秒#}
+{#            window.location.reload();//页面刷新#}
+{#        }, 2000);#}
+{#    </script>#}
+</nav>
