--- a/Web/loginfunction/templates/table1.html
+++ b/Web/loginfunction/templates/table1.html
@@ -1,6 +1,6 @@
 <div class="card mb-3">
             <div class="card-header">
-                <i class="fa fa-table"></i> Data Table Example
+                <i class="fa fa-table"></i> 人流量历史记录表
             </div>
             <div class="card-body">
                 <div class="table-responsive">
