--- a/Web/loginfunction/templates/charts.html
+++ b/Web/loginfunction/templates/charts.html
@@ -29,13 +29,63 @@
             <li class="breadcrumb-item active">Charts</li>
         </ol>
         <!-- Area Chart Example-->
-        {% include "chart1.html" %}
+        <div class="card mb-3">
+             <div class="card-header">
+                 <i class="fa fa-area-chart"></i> 人流量历史记录
+                </div>
+            <div class="card-body">
+                    <canvas id="myAreaChart" width="100%" height="30"></canvas>
+            </div>
+            <div class="card-footer small text-muted">更新时间： 11:59 PM</div>
+        </div>
+
 
         <div class="row">
-            {% include "chart2.html" %}
-            {% include "chart3.html" %}
+           <div class="col-lg-8">
+                    <!-- Example Bar Chart Card-->
+                    <div class="card mb-3">
+                        <div class="card-header">
+                            <i class="fa fa-bar-chart"></i> Bar Chart Example
+                        </div>
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-sm-8 my-auto">
+                                    <canvas id="myBarChart" width="100" height="50"></canvas>
+                                </div>
+                                <div class="col-sm-4 text-center my-auto">
+                                    <div class="h4 mb-0 text-primary">$34,693</div>
+                                    <div class="small text-muted">YTD Revenue</div>
+                                    <hr>
+                                    <div class="h4 mb-0 text-warning">$18,474</div>
+                                    <div class="small text-muted">YTD Expenses</div>
+                                    <hr>
+                                    <div class="h4 mb-0 text-success">$16,219</div>
+                                    <div class="small text-muted">YTD Margin</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer small text-muted">更新于： 11:59 PM</div>
+                    </div>
+                </div>
+
+
+            <div class="col-lg-4">
+                 <div class="card mb-3">
+                    <div class="card-header">
+                        <i class="fa fa-pie-chart"></i> Pie Chart Example
+                    </div>
+                    <div class="card-body">
+                         <canvas id="myPieChart" width="100%" height="100"></canvas>
+                    </div>
+                     <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                </div>
+
+            </div>
+
+
         </div>
     </div>
+
     <!-- /.container-fluid-->
     <!-- /.content-wrapper-->
     <footer class="sticky-footer">
