--- a/Web/loginfunction/templates/index.html
+++ b/Web/loginfunction/templates/index.html
@@ -32,19 +32,19 @@
             <!-- Icon Cards-->
             <div class="row">
                 <div class="col-xl-12 mb-3 h-100 w-100">
-                    {% if count.count > 1000 %}
+                    {% if count.pedestrian_flow > 1000 %}
                         <div class="card text-white bg-danger o-hidden h-100 w-100">
                             <div class="card-body">
-                                <div class="mr-5 text-center">当前人流量:{{ count.count }}人次</div>
+                                <div class="mr-5 text-center">当前人流量:{{ count.pedestrian_flow }}人次</div>
                             </div>
                             <a class="card-footer text-white small z-1 " href="#">
                                 <span class="float-left ">当前状态:红色预警</span></span>
                             </a>
                         </div>
-                    {% elif count.count > 500 %}
+                    {% elif count.pedestrian_flow > 500 %}
                         <div class="card text-white bg-warning o-hidden h-100 w-100">
                             <div class="card-body">
-                                <div class="mr-5 text-center">当前人流量:{{ count.count }}人次</div>
+                                <div class="mr-5 text-center">当前人流量:{{ count.pedestrian_flow }}人次</div>
                             </div>
                             <a class="card-footer text-white small z-1 " href="#">
                                 <span class="float-left ">当前状态:黄色预警</span></span>
@@ -54,7 +54,7 @@
                     {% else %}
                         <div class="card text-white bg-success o-hidden h-100 w-100">
                             <div class="card-body">
-                                <div class="mr-5 text-center">当前人流量:{{ count.count }}人次</div>
+                                <div class="mr-5 text-center">当前人流量:{{ count.pedestrian_flow }}人次</div>
                             </div>
                             <a class="card-footer text-white small z-1 " href="#">
                                 <span class="float-left ">当前状态:正常状态</span></span>
