--- a/Web/loginfunction/templates/index.html
+++ b/Web/loginfunction/templates/index.html
@@ -33,35 +33,14 @@
             <!-- Icon Cards-->
             <div class="row">
                 <div class="col-xl-12 mb-3 h-100 w-100">
-                    {% if count.pedestrian_flow > 1000 %}
-                        <div class="card text-white bg-danger o-hidden h-100 w-100">
+                        <div class="card text-white bg-success o-hidden h-100 w-100" id="icon_cards">
                             <div class="card-body">
-                                <div class="mr-5 text-center">当前人流量:{{ count.pedestrian_flow }}人次</div>
+                                <div class="mr-5 text-center" id="update_flow"></div>
                             </div>
                             <a class="card-footer text-white small z-1 " href="#">
-                                <span class="float-left ">当前状态:红色预警</span></span>
+                                <span class="float-left " id="sos">当前状态:正常情况</span></span>
                             </a>
                         </div>
-                    {% elif count.pedestrian_flow > 500 %}
-                        <div class="card text-white bg-warning o-hidden h-100 w-100">
-                            <div class="card-body">
-                                <div class="mr-5 text-center">当前人流量:{{ count.pedestrian_flow }}人次</div>
-                            </div>
-                            <a class="card-footer text-white small z-1 " href="#">
-                                <span class="float-left ">当前状态:黄色预警</span></span>
-                            </a>
-                        </div>
-                        <div class="card-footer small text-dark">更新时间: {{ count.c_time }}</div>
-                    {% else %}
-                        <div class="card text-white bg-success o-hidden h-100 w-100">
-                            <div class="card-body">
-                                <div class="mr-5 text-center">当前人流量:{{ count.pedestrian_flow }}人次</div>
-                            </div>
-                            <a class="card-footer text-white small z-1 " href="#">
-                                <span class="float-left ">当前状态:正常状态</span></span>
-                            </a>
-                        </div>
-                    {% endif %}
                 </div>
             </div>
             <!-- Area Chart Example-->
@@ -72,7 +51,7 @@
                  <div class="card-body">
                     <canvas id="myAreaChart" width="100%" height="30" ></canvas>
                 </div>
-                <div class="card-footer small text-muted">更新时间： 11:59 PM</div>
+                <div class="card-footer small text-muted" id="update_time"></div>
             </div>
 
             <div class="row">
