完成部分开会内容

--- a/Web/loginfunction/templates/table1.html
+++ b/Web/loginfunction/templates/table1.html
@@ -14,12 +14,6 @@
                         </tr>
                         </thead>
                         <tfoot>
-{#                        <tr>#}
-{#                            <th>Name</th>#}
-{#                            <th>Location</th>#}
-{#                            <th>Phone Number</th>#}
-{#                            <th>WeiChart</th>#}
-{#                        </tr>#}
                         </tfoot>
                         <tbody>
                         {% for data in datas %}
@@ -33,5 +27,5 @@
                     </table>
                 </div>
             </div>
-            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-        </div>
+            <div class="card-footer small text-muted">更新于 11:59 PM</div>
+</div>
