--- a/Web/loginfunction/templates/chart2.html
+++ b/Web/loginfunction/templates/chart2.html
@@ -1,26 +1,20 @@
-<div class="col-lg-8">
-                    <!-- Example Bar Chart Card-->
-                    <div class="card mb-3">
-                        <div class="card-header">
-                            <i class="fa fa-bar-chart"></i> 人流量趋势
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-8 my-auto">
-                                    <canvas id="myBarChart" width="100" height="50"></canvas>
-                                </div>
-                                <div class="col-sm-4 text-center my-auto">
-                                    <div class="h4 mb-0 text-primary">$34,693</div>
-                                    <div class="small text-muted">YTD Revenue</div>
-                                    <hr>
-                                    <div class="h4 mb-0 text-warning">$18,474</div>
-                                    <div class="small text-muted">YTD Expenses</div>
-                                    <hr>
-                                    <div class="h4 mb-0 text-success">$16,219</div>
-                                    <div class="small text-muted">YTD Margin</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-footer small text-muted">更新于： 11:59 PM</div>
-                    </div>
+<div class="card-header">
+            <i class="fa fa-bar-chart"></i> 人流量趋势
+        </div>
+        <div class="card-body">
+            <div class="row">
+                <div class="col-sm-8 my-auto">
+                    <canvas id="myBarChart" width="100" height="50"></canvas>
                 </div>
+                <div class="col-sm-4 text-center my-auto">
+                    <div class="h4 mb-0 text-primary">$34,693</div>
+                    <div class="small text-muted">正常人流天数</div>
+                    <hr>
+                    <div class="h4 mb-0 text-warning">$18,474</div>
+                    <div class="small text-muted">黄色预警天数</div>
+                    <hr>
+                    <div class="h4 mb-0 text-success">123</div>
+                    <div class="small text-muted">红色预警天数</div>
+                </div>
+            </div>
+        </div>
