--- a/Web/loginfunction/templates/charts.html
+++ b/Web/loginfunction/templates/charts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 {% load static %}
 <head>
     <meta charset="utf-8">
@@ -30,56 +30,23 @@
         </ol>
         <!-- Area Chart Example-->
         <div class="card mb-3">
-             <div class="card-header">
-                 <i class="fa fa-area-chart"></i> 人流量历史记录
-                </div>
-            <div class="card-body">
-                    <canvas id="myAreaChart" width="100%" height="30"></canvas>
+            <div class="card-header">
+                <i class="fa fa-area-chart"></i> 人流量历史记录
             </div>
-            <div class="card-footer small text-muted">更新时间： 11:59 PM</div>
+            <div class="card-body">
+                <canvas id="myAreaChart" width="100%" height="30"></canvas>
+            </div>
+            <div class="card-footer small text-muted">更新时间:{{ current_time }}</div>
         </div>
 
 
         <div class="row">
-           <div class="col-lg-8">
-                    <!-- Example Bar Chart Card-->
-                    <div class="card mb-3">
-                        <div class="card-header">
-                            <i class="fa fa-bar-chart"></i> Bar Chart Example
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-8 my-auto">
-                                    <canvas id="myBarChart" width="100" height="50"></canvas>
-                                </div>
-                                <div class="col-sm-4 text-center my-auto">
-                                    <div class="h4 mb-0 text-primary">$34,693</div>
-                                    <div class="small text-muted">YTD Revenue</div>
-                                    <hr>
-                                    <div class="h4 mb-0 text-warning">$18,474</div>
-                                    <div class="small text-muted">YTD Expenses</div>
-                                    <hr>
-                                    <div class="h4 mb-0 text-success">$16,219</div>
-                                    <div class="small text-muted">YTD Margin</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-footer small text-muted">更新于： 11:59 PM</div>
-                    </div>
+            <div class="col-lg-8">
+                <!-- Example Bar Chart Card-->
+                <div class="card mb-3">
+                    {% include "chart2.html" %}
+                    <div class="card-footer small text-muted">更新时间:{{ current_time }}</div>
                 </div>
-
-
-            <div class="col-lg-4">
-                 <div class="card mb-3">
-                    <div class="card-header">
-                        <i class="fa fa-pie-chart"></i> Pie Chart Example
-                    </div>
-                    <div class="card-body">
-                         <canvas id="myPieChart" width="100%" height="100"></canvas>
-                    </div>
-                     <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-                </div>
-
             </div>
 
 
@@ -120,7 +87,153 @@
 <script src={% static "js/sb-admin.min.js" %}></script>
 <!-- Custom scripts for this page-->
 <script src={% static "js/sb-admin-datatables.min.js" %}></script>
-<script src={% static "js/sb-admin-charts.min.js" %}></script>
+<script>
+    /*!
+ * Start Bootstrap - SB Admin v4.0.0-beta.2 (https://startbootstrap.com/template-overviews/sb-admin)
+ * Copyright 2013-2017 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-sb-admin/blob/master/LICENSE)
+ */
+    Chart.defaults.global.defaultFontFamily = '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif',
+        Chart.defaults.global.defaultFontColor = "#292b2c";
+    var ctx = document.getElementById("myAreaChart");
+    var labels = {{ json_data_time| safe }};
+    var red = "bg-danger";
+    var redtext = "红色预警";
+    var yellow = "bg-warning";
+    var yellowtext = "黄色预警";
+    var green = "bg-success";
+    var greentext = "情况正常";
+
+    var data = {{ json_data_data|safe }};
+    myLineChart = new Chart(ctx,
+        {
+            type: "line",
+            data: {
+                labels: labels,
+                datasets: [
+                    {
+                        label: "Sessions",
+                        lineTension: .3,
+                        backgroundColor: "rgba(2,117,216,0.2)",
+                        borderColor: "rgba(2,117,216,1)",
+                        pointRadius: 5,
+                        pointBackgroundColor: "rgba(2,117,216,1)",
+                        pointBorderColor: "rgba(255,255,255,0.8)",
+                        pointHoverRadius: 5,
+                        pointHoverBackgroundColor: "rgba(2,117,216,1)",
+                        pointHitRadius: 20,
+                        pointBorderWidth: 2,
+                        data: data
+                    }
+                ]
+            },
+            options: {
+                scales: {
+                    xAxes: [{
+                        time: {unit: "date"},
+                        gridLines: {display: !1},
+                        ticks: {maxTicksLimit: 7}
+                    }],
+                    yAxes: [{
+                        ticks: {min: 0, max: 4e4, maxTicksLimit: 5},
+                        gridLines: {color: "rgba(0, 0, 0, .125)"}
+                    }]
+                },
+                legend: {display: !1},
+                //animation : true
+            }
+        }
+    )
+    setInterval(function area_flush() {
+        $.ajax("/part_flush/", {
+            type: "GET",
+            url: "/part_flush/",
+            dataType: "json",
+            success: function (data) {
+                var k = "";
+                var s = 0;
+                k = data[0];
+                s = data[1];
+                myLineChart.data.labels.pop();
+                myLineChart.data.labels.unshift(k);
+                myLineChart.data.datasets[0].data.pop();
+                myLineChart.data.datasets[0].data.unshift(s);
+                myLineChart.update();
+                console.log("更新时间:" + k);
+                console.log("当前人流量:" + s.toString() + "人次");
+                var color = "";
+                var text = "";
+                if (s > 10000) {
+                    color = red;
+                    text = redtext;
+                } else if (s < 10000 && s >= 500) {
+                    color = yellow;
+                    text = yellowtext;
+                } else {
+                    color = green;
+                    text = greentext;
+                }
+                document.getElementById("icon_cards").className = "card text-white " + color + " o-hidden h-100 w-100";
+                document.getElementById("sos").innerHTML = "当前状态:" + text;
+                document.getElementById("update_time").innerHTML = "更新时间:" + k;
+                document.getElementById("update_flow").innerHTML = "当前人流量:" + s.toString() + "人次";
+            },
+            error: function () {
+                error("获取数据错误");
+            }
+        })
+    }, 50000);
+
+    ctx = document.getElementById("myBarChart");
+    myBarChart = new Chart(ctx,
+        {
+            type: "bar",
+            data: {
+                labels: ["周一", "周二", "周三", "周四", "周五", "周六", "周日"],
+                datasets: [
+                    {
+                        label: "人流量",
+                        backgroundColor: "rgba(2,117,216,1)",
+                        borderColor: "rgba(2,117,216,1)",
+                        data: [4215, 5312, 6251, 7841, 9821, 14984, 12345]
+                    }
+                ]
+            },
+            options: {
+                scales: {
+                    xAxes: [
+                        {
+                            time: {
+                                unit: "month"
+                            },
+                            gridLines: {
+                                display: !1
+                            },
+                            ticks: {
+                                maxTicksLimit: 6
+                            }
+                        }
+                    ],
+                    yAxes: [
+                        {
+                            ticks:
+                                {
+                                    min: 0,
+                                    max: 15e3,
+                                    maxTicksLimit: 5
+                                },
+                            gridLines: {display: !0}
+                        }]
+                }, legend: {display: !1}
+            }
+        }), ctx = document.getElementById("myPieChart"), myPieChart = new Chart(ctx, {
+        type: "pie",
+        data: {
+            labels: ["正常", "红色预警", "黄色预警"],
+            datasets: [{data: [3, 2, 2], backgroundColor: ["#007bff", "#dc3545", "#ffc107"]}]
+        }
+    });
+</script>
 </div>
 </body>
 
