--- a/Web/loginfunction/templates/index.html
+++ b/Web/loginfunction/templates/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,11 +8,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>人流管理系统</title>
-   <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
     <!-- Bootstrap core CSS-->
     <link href={% static "vendor/bootstrap/css/bootstrap.min.css" %} rel="stylesheet">
     <!-- Custom fonts for this template-->
     <link href={% static "vendor/font-awesome/css/font-awesome.min.css" %} rel="stylesheet" type="text/css">
+    <link href={% static "vendor/font-awesome/css/font-awesome.min.css" %} rel="stylesheet" type="text">
     <!-- Page level plugin CSS-->
     <link href={% static "vendor/datatables/dataTables.bootstrap4.css" %} rel="stylesheet">
     <!-- Custom styles for this template-->
@@ -24,118 +24,80 @@
     <!-- Navigation-->
     {% include "model.html" %}
     <div class="content-wrapper">
-        <div class="container-fluid">
-            <!-- Breadcrumbs-->
-            <div class="card-header">
-                <i class="fa fa-newspaper-o"> </i>
-                当前人流信息:
-            </div>
-            <!-- Icon Cards-->
-            <div class="row">
-                <div class="col-xl-12 mb-3 h-100 w-100">
-                        <div class="card text-white bg-success o-hidden h-100 w-100" id="icon_cards">
-                            <div class="card-body">
-                                <div class="mr-5 text-center" id="update_flow"></div>
-                            </div>
-                            <a class="card-footer text-white small z-1 " href="#">
-                                <span class="float-left " id="sos">当前状态:正常情况</span></span>
-                            </a>
-                        </div>
-                </div>
-            </div>
-            <!-- Area Chart Example-->
-           <div class="card mb-3">
-                <div class="card-header">
-                     <i class="fa fa-area-chart" ></i> 人流量历史记录
-                 </div>
-                 <div class="card-body">
-                    <canvas id="myAreaChart" width="100%" height="30" ></canvas>
-                </div>
-                <div class="card-footer small text-muted" id="update_time"></div>
-            </div>
-
-            <div class="row">
-
-               <div class="col-lg-8">
-                    <!-- Example Bar Chart Card-->
-                    <div class="card mb-3">
-                        <div class="card-header">
-                            <i class="fa fa-bar-chart"></i> Bar Chart Example
-                        </div>
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col-sm-8 my-auto">
-                                    <canvas id="myBarChart" width="100" height="50"></canvas>
-                                </div>
-                                <div class="col-sm-4 text-center my-auto">
-                                    <div class="h4 mb-0 text-primary">$34,693</div>
-                                    <div class="small text-muted">YTD Revenue</div>
-                                    <hr>
-                                    <div class="h4 mb-0 text-warning">$18,474</div>
-                                    <div class="small text-muted">YTD Expenses</div>
-                                    <hr>
-                                    <div class="h4 mb-0 text-success">$16,219</div>
-                                    <div class="small text-muted">YTD Margin</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card-footer small text-muted">更新于： 11:59 PM</div>
+    <div class="container-fluid">
+        <!-- Breadcrumbs-->
+        <div class="card-header">
+            <i class="fa fa-newspaper-o"> </i>
+            当前人流信息:
+        </div>
+        <!-- Icon Cards-->
+        <div class="row">
+            {% if current_count > yuzhi.threshold_value_yellow %}
+            <div class="col-xl-12 mb-3 h-100 w-100">
+                <div class="card text-white bg-danger o-hidden h-100 w-100" id="icon_cards">
+                    <div class="card-body">
+                        <div class="mr-5 text-center" id="update_flow">当前人流量:{{ current_count }}人次</div>
                     </div>
+                    <a class="card-footer text-white small z-1 " href="#">
+                        <span class="float-left " id="sos">当前状态:红色预警</span>
+                    </a>
                 </div>
+            <div class="card-footer small text-muted">更新时间:{{ current_time }}</div>
             </div>
-            <!-- /Card Columns-->
+            {% elif current_count > yuzhi.threshold_value_normal  %}
+            <div class="col-xl-12 mb-3 h-100 w-100">
+                <div class="card text-white bg-warning o-hidden h-100 w-100" id="icon_cards">
+                    <div class="card-body">
+                        <div class="mr-5 text-center" id="update_flow">当前人流量:{{ current_count }}人次</div>
+                    </div>
+                    <a class="card-footer text-white small z-1 " href="#">
+                        <span class="float-left " id="sos">当前状态:黄色预警</span>
+                    </a>
+                </div>
+            <div class="card-footer small text-muted">更新时间:{{ current_time }}</div>
+            </div>
+            {% else%}
+            <div class="col-xl-12 mb-3 h-100 w-100">
+                <div class="card text-white bg-w o-hidden h-100 w-100" id="icon_cards">
+                    <div class="card-body">
+                        <div class="mr-5 text-center" id="update_flow">当前人流量:{{ current_count }}人次</div>
+                    </div>
+                    <a class="card-footer text-white small z-1 " href="#">
+                        <span class="float-left " id="sos">当前状态:正常情况</span>
+                    </a>
+
+                </div>
+            <div class="card-footer small text-muted">更新时间:{{ current_time }}</div>
+            </div>
+                {% endif %}
         </div>
 
-        <div class="col-lg-4">
-            <div class="card mb-3">
-                <div class="card-header">
-                    <i class="fa fa-pie-chart"></i> Pie Chart Example
-                 </div>
-            <div class="card-body">
-                <canvas id="myPieChart" width="100%" height="100"></canvas>
-             </div>
-             <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-            </div>
-        </div>
-
-        <!-- Example DataTables Card-->
-         <div class="card mb-3">
+        <!-- Area Chart Example-->
+        <div class="card mb-3">
             <div class="card-header">
-                <i class="fa fa-table"></i> Data Table Example
+                <i class="fa fa-area-chart"></i> 人流量历史记录
             </div>
             <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                        <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Location</th>
-                            <th>Phone Number</th>
-                            <th>WeiChart</th>
-                        </tr>
-                        </thead>
-                        <tfoot>
-                        <tr>
-                            <th>Name</th>
-                            <th>Location</th>
-                            <th>Phone Number</th>
-                            <th>WeiChart</th>
-                        </tr>
-                        </tfoot>
-                        <tbody>
-                        {% for data in datas%}
-                            <tr>
-                           {% for i in data %}
-                               <td>{{ i }}</td>
-                           {% endfor %}
-                            </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
+                <canvas id="myAreaChart" width="100%" height="30"></canvas>
+            </div>
+            <div class="card-footer small text-muted" id="update_time">更新时间:{{ current_time }}</div>
+
+        </div>
+
+        <div class="row">
+            <div class="col-lg-8">
+                <!-- Example Bar Chart Card-->
+                <div class="card mb-3">
+                    {% include "chart2.html" %}
+                    <div class="card-footer small text-muted">更新时间:{{ current_time }}</div>
                 </div>
             </div>
-            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
-        </div>
+        <!-- /Card Columns-->
+    </div>
+
+    <!-- Example DataTables Card-->
+    <div class="card mb-3">
+        {% include "table1.html" %}
     </div>
     <!-- /.container-fluid-->
     <!-- /.content-wrapper-->
@@ -149,7 +111,7 @@
     </a>
     <!-- Logout Modal-->
     {% include "logout_model.html" %}
-{% else %}
+{% elif  not user.is_authenticated %}
     {#    <meta http-equiv="refresh" content="0" href={% url "login:login" %}>#}
     <script>
         const redirect = (url, asLink = true) =>
@@ -177,4 +139,149 @@
 
 </html>
 <script>
+    /*!
+ * Start Bootstrap - SB Admin v4.0.0-beta.2 (https://startbootstrap.com/template-overviews/sb-admin)
+ * Copyright 2013-2017 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-sb-admin/blob/master/LICENSE)
+ */
+    Chart.defaults.global.defaultFontFamily = '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif',
+        Chart.defaults.global.defaultFontColor = "#292b2c";
+    var ctx = document.getElementById("myAreaChart");
+    var labels = {{ json_data_time| safe }};
+    var red = "bg-danger";
+    var redtext = "红色预警";
+    var yellow = "bg-warning";
+    var yellowtext = "黄色预警";
+    var green = "bg-success";
+    var greentext = "情况正常";
+
+    var data = {{ json_data_data|safe }};
+    myLineChart = new Chart(ctx,
+        {
+            type: "line",
+            data: {
+                labels: labels,
+                datasets: [
+                    {
+                        label: "Sessions",
+                        lineTension: .3,
+                        backgroundColor: "rgba(2,117,216,0.2)",
+                        borderColor: "rgba(2,117,216,1)",
+                        pointRadius: 5,
+                        pointBackgroundColor: "rgba(2,117,216,1)",
+                        pointBorderColor: "rgba(255,255,255,0.8)",
+                        pointHoverRadius: 5,
+                        pointHoverBackgroundColor: "rgba(2,117,216,1)",
+                        pointHitRadius: 20,
+                        pointBorderWidth: 2,
+                        data: data
+                    }
+                ]
+            },
+            options: {
+                scales: {
+                    xAxes: [{
+                        time: {unit: "date"},
+                        gridLines: {display: !1},
+                        ticks: {maxTicksLimit: 7}
+                    }],
+                    yAxes: [{
+                        ticks: {min: 0, max: 4e4, maxTicksLimit: 5},
+                        gridLines: {color: "rgba(0, 0, 0, .125)"}
+                    }]
+                },
+                legend: {display: !1},
+                //animation : true
+            }
+        }
+    )
+    setInterval(function area_flush() {
+        $.ajax("/part_flush/", {
+            type: "GET",
+            url: "/part_flush/",
+            dataType: "json",
+            success: function (data) {
+                var k = "";
+                var s = 0;
+                k = data[0];
+                s = data[1];
+                myLineChart.data.labels.pop();
+                myLineChart.data.labels.unshift(k);
+                myLineChart.data.datasets[0].data.pop();
+                myLineChart.data.datasets[0].data.unshift(s);
+                myLineChart.update();
+                console.log("更新时间:" + k);
+                console.log("当前人流量:" + s.toString() + "人次");
+                var color = "";
+                var text = "";
+                if (s > {{ yuzhi_json_yellow }}) {
+                    color = red;
+                    text = redtext;
+                } else if (s < {{ yuzhi_json_yellow }} && s >= {{ yuzhi_json_normal }}) {
+                    color = yellow;
+                    text = yellowtext;
+                } else {
+                    color = green;
+                    text = greentext;
+                }
+                document.getElementById("icon_cards").className = "card text-white " + color + " o-hidden h-100 w-100";
+                document.getElementById("sos").innerHTML = "当前状态:" + text;
+                document.getElementById("update_time").innerHTML = "更新时间:" + k;
+                document.getElementById("update_flow").innerHTML = "当前人流量:" + s.toString() + "人次";
+            },
+            error: function () {
+                error("获取数据错误");
+            }
+        })
+    }, 5000);
+
+    ctx = document.getElementById("myBarChart");
+    myBarChart = new Chart(ctx,
+        {
+            type: "bar",
+            data: {
+                labels: ["周一", "周二", "周三", "周四", "周五", "周六", "周日"],
+                datasets: [
+                    {
+                        label: "人流量",
+                        backgroundColor: "rgba(2,117,216,1)",
+                        borderColor: "rgba(2,117,216,1)",
+                        data: [4215, 5312, 6251, 7841, 9821, 14984, 12345]
+                    }
+                ]
+            },
+            options: {
+                scales: {
+                    xAxes: [
+                        {
+                            time: {
+                                unit: "month"
+                            },
+                            gridLines: {
+                                display: !1
+                            },
+                            ticks: {
+                                maxTicksLimit: 6
+                            }
+                        }
+                    ],
+                    yAxes: [
+                        {
+                            ticks:
+                                {
+                                    min: 0,
+                                    max: 15e3,
+                                    maxTicksLimit: 5
+                                },
+                            gridLines: {display: !0}
+                        }]
+                }, legend: {display: !1}
+            }
+        }), ctx = document.getElementById("myPieChart"), myPieChart = new Chart(ctx, {
+        type: "pie",
+        data: {
+            labels: ["正常", "红色预警", "黄色预警"],
+            datasets: [{data: [3, 2, 2], backgroundColor: ["#007bff", "#dc3545", "#ffc107"]}]
+        }
+    });
 </script>
