--- a/Web/loginfunction/templates/register.html
+++ b/Web/loginfunction/templates/register.html
@@ -31,13 +31,40 @@
                     <div class="form-row">
                         <div class="col-md-6">
                             <label for="username">账户名</label>
-                            <input class="form-control" id="username" name="username" type="text" aria-describedby="nameHelp" placeholder="输入您的账户名">
+                            <input class="form-control" id="username" name="username" type="text"
+                                   aria-describedby="nameHelp" placeholder="输入您的账户名">
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
+                    <div class="form-row">
+                        <div class="col-md-6">
+                            <label for="name">姓名</label>
+                            <input class="form-control" id="name"  name="name" type="text"
+                                   aria-describedby="nameHelp" placeholder="输入您的姓名">
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="local">维护地点</label>
+                    <input class="form-control" id="local" name="local" type="text"
+                           placeholder="输入您的地址">
+                </div>
+                <div class="form-group">
                     <label for="email">邮箱</label>
-                    <input class="form-control" id="email" type="email" name="email" aria-describedby="emailHelp" placeholder="输入您的邮箱">
+                    <input class="form-control" id="email" name="email" type="email"
+                           placeholder="输入您的邮箱">
+                </div>
+
+                <div class="form-group">
+                    <label for="email">电话</label>
+                    <input class="form-control" id="phone" name="phone" type="text"
+                           placeholder="输入您的电话">
+                </div>
+                <div class="form-group">
+                    <label for="wechat">微信</label>
+                    <input class="form-control" id="wechat" name="wechat" type="text"
+                           placeholder="输入您的微信">
                 </div>
                 <div class="form-group">
                     <div class="form-row">
@@ -47,7 +74,8 @@
                         </div>
                         <div class="col-md-6">
                             <label for="password2">确认密码</label>
-                            <input class="form-control" id="password2" name="password2" type="password" placeholder="确认您的密码">
+                            <input class="form-control" id="password2" name="password2" type="password"
+                                   placeholder="确认您的密码">
                         </div>
                     </div>
                 </div>
@@ -55,7 +83,7 @@
             </form>
             <div class="text-center">
                 <a class="d-block small mt-3" href={% url "login:login" %} }}>登录</a>
-{#                <a class="d-block small" href="forgot-password.html">忘记密码?</a>#}
+                {#                <a class="d-block small" href="forgot-password.html">忘记密码?</a>#}
             </div>
         </div>
     </div>
