--- a/Web/loginfunction/templates/index.html
+++ b/Web/loginfunction/templates/index.html
@@ -187,7 +187,7 @@
                         pointHoverBackgroundColor: "rgba(0,0,0,1)",
                         pointHitRadius: 20,
                         pointBorderWidth: 2,
-                        data: [0,0,0,0,0,0,0,0,0,0,0,0,0,0]
+                        data: {{ json_data_data_2|safe }}
                     },
                     {
                         label: "其他",
@@ -201,7 +201,7 @@
                         pointHoverBackgroundColor: "rgba(255,0,0,1)",
                         pointHitRadius: 20,
                         pointBorderWidth: 2,
-                        data: [0,0,0,0,0,0,0,0,0,0,0,0,0,0]
+                        data: {{ json_data_data_3|safe }}
                     }
                 ]
             },
