--- a/Web/loginfunction/templates/tables.html
+++ b/Web/loginfunction/templates/tables.html
@@ -28,7 +28,7 @@
             <li class="breadcrumb-item">
                 <a href={% url "index" %}>人流量管理系统</a>
             </li>
-            <li class="breadcrumb-item active">历史记录表</li>
+            <li class="breadcrumb-item active">人员信息表</li>
         </ol>
         <!-- Example DataTables Card-->
         <div class="card mb-3">
