--- a/Web/loginfunction/templates/charts.html
+++ b/Web/loginfunction/templates/charts.html
@@ -31,7 +31,7 @@
         <!-- Area Chart Example-->
         <div class="card mb-3">
             <div class="card-header">
-                <i class="fa fa-area-chart"></i> 人流量历史记录
+                <i class="fa fa-area-chart"></i> 人流量实时记录
             </div>
             <div class="card-body">
                 <canvas id="myAreaChart" width="100%" height="30"></canvas>
