--- a/Web/loginfunction/templates/model.html
+++ b/Web/loginfunction/templates/model.html
@@ -22,7 +22,7 @@
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
                 <a class="nav-link" href={% url "tables" %}>
                     <i class="fa fa-fw fa-table"></i>
-                    <span class="nav-link-text">人流量记录表</span>
+                    <span class="nav-link-text">安保人员信息表</span>
                 </a>
             </li>
         </ul>
