--- a/Web/loginfunction/templates/model.html
+++ b/Web/loginfunction/templates/model.html
@@ -25,6 +25,12 @@
                     <span class="nav-link-text">安保人员信息表</span>
                 </a>
             </li>
+            <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+                <a class="nav-link" href={% url "video" %}>
+                    <i class="fa fa-fw fa-table"></i>
+                    <span class="nav-link-text">异常视频</span>
+                </a>
+            </li>
         </ul>
 
         <ul class="navbar-nav sidenav-toggler">
@@ -42,9 +48,9 @@
             </li>
         </ul>
     </div>
-{#    <script type="text/javascript">#}
-{#        setTimeout(function () {  //使用  setTimeout（）方法设定定时2000毫秒#}
-{#            window.location.reload();//页面刷新#}
-{#        }, 2000);#}
-{#    </script>#}
+    {#    <script type="text/javascript">#}
+    {#        setTimeout(function () {  //使用  setTimeout（）方法设定定时2000毫秒#}
+    {#            window.location.reload();//页面刷新#}
+    {#        }, 2000);#}
+    {#    </script>#}
 </nav>
